[tool.poetry]
name = "tramway"
version = "0.6.6"
description = ""
authors = ["François Laurent <francois.laurent@pasteur.fr>"]
license = "CECILL-2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
six = "^1.16.0"
numpy = "^1.24.3"
scipy = "<1.9.2"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
rwa = {path = "../RWA-python", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.full.dependencies]
polytope = "^0.2.3"
paramiko = "^3.2.0"
stopit = "^1.1.2"
nbconvert = "^7.4.0"
bokeh = ">=2.0.2,<2.3.0"
selenium = "^4.9.1"
plotly = "^5.14.1"
nbformat = "^5.9.0"
opencv-python = "^4.7.0.72"
scikit-image = "^0.20.0"
tqdm = "^4.65.0"



[tool.poetry.group.roi.dependencies]
polytope = "^0.2.3"
tqdm = "^4.65.0"


[tool.poetry.group.animate.dependencies]
opencv-python = "^4.7.0.72"
scikit-image = "^0.20.0"
tqdm = "^4.65.0"


[tool.poetry.group.webui.dependencies]
bokeh = ">=2.0.2,<2.3.0"
selenium = "^4.9.1"
plotly = "^5.14.1"
nbformat = "^5.9.0"


[tool.poetry.group.hpc-minimal.dependencies]
polytope = "^0.2.3"
stopit = "^1.1.2"


[tool.poetry.group.hpc.dependencies]
polytope = "^0.2.3"
paramiko = "^3.2.0"
stopit = "^1.1.2"
nbconvert = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
